--- a/projects/javafx-with-spring/src/main/resources/views/PersistenceExample.fxml
+++ b/projects/javafx-with-spring/src/main/resources/views/PersistenceExample.fxml
@@ -22,26 +22,31 @@
 	NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, 
 	EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DialogPane?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 
-<VBox prefHeight="400.0" prefWidth="640.0"
-	xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.gusrubin.lab.javafxwithspring.application.gui.controllers.PersistenceExample">
+<AnchorPane fx:id="persistenceExamplePane" prefHeight="400.0"
+	prefWidth="640.0" xmlns="http://javafx.com/javafx/21"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="com.gusrubin.lab.javafxwithspring.application.gui.controllers.PersistenceExample"
+	visible="false">
 	<children>
-		<AnchorPane fx:id="pane" maxHeight="-1.0" maxWidth="-1.0"
-			prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-			<children>
-				<Label layoutX="198.0" layoutY="70.0"
-					text="Persistence Example" />
-				<DialogPane layoutX="146.0" layoutY="101.0" />
-			</children>
-		</AnchorPane>
+		<Label text="Persistence Example" AnchorPane.leftAnchor="240"
+			AnchorPane.topAnchor="20" />
+		<ListView fx:id="wordList" layoutX="149.0" layoutY="62.0"
+			prefHeight="200.0" prefWidth="244.0" />
+		<Button fx:id="wordNew" layoutX="406.0" layoutY="62.0"
+			mnemonicParsing="false" prefHeight="24.0" prefWidth="61.0" text="New" />
+		<Button fx:id="wordEdit" layoutX="406.0" layoutY="96.0"
+			mnemonicParsing="false" prefHeight="24.0" prefWidth="61.0"
+			text="Edit" />
+		<Button fx:id="wordDelete" layoutX="406.0" layoutY="131.0"
+			mnemonicParsing="false" text="Delete" />
+		<Label layoutX="149.0" layoutY="269.0" text="Filter" />
+		<TextField fx:id="wordFilter" layoutX="149.0"
+			layoutY="285.0" prefHeight="24.0" prefWidth="244.0" />
 	</children>
-</VBox>
+</AnchorPane>
