--- a/projects/javafx-with-spring/src/main/resources/views/MainView.fxml
+++ b/projects/javafx-with-spring/src/main/resources/views/MainView.fxml
@@ -22,7 +22,6 @@
 	NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, 
 	EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. -->
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -30,9 +29,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="600"
+<VBox prefHeight="400" prefWidth="600"
 	xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.gusrubin.lab.javafxwithspring.application.gui.controllers.MainWindow">
+	fx:controller="com.gusrubin.lab.javafxwithspring.application.gui.controllers.MainController">
 	<children>
 		<MenuBar VBox.vgrow="NEVER">
 			<menus>
@@ -52,29 +51,39 @@
 		<AnchorPane VBox.vgrow="ALWAYS"
 			xmlns:fx="http://javafx.com/fxml">
 			<children>
-				<AnchorPane fx:id="systemInfoPane"
-					AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-					AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
-					visible="true">
+				<AnchorPane fx:id="mainPane" VBox.vgrow="ALWAYS"
+					xmlns:fx="http://javafx.com/fxml">
 					<children>
-						<Label layoutX="198.0" AnchorPane.topAnchor="80"
-							AnchorPane.leftAnchor="185"
-							text="JavaFX with Spring Boot - Hello World" />
-						<Button fx:id="openDialogButton" AnchorPane.topAnchor="160"
-							AnchorPane.leftAnchor="210" mnemonicParsing="false"
-							text="Get Some Info Using Spring" />
+						<Label text="JavaFX with Spring Boot - Hello World"
+							AnchorPane.leftAnchor="180" AnchorPane.topAnchor="150" />
 					</children>
 				</AnchorPane>
-				<fx:include source="PersistenceExample.fxml" fx:id="persistenceExamplePane"/>
-<!-- 				<AnchorPane fx:id="persistenceExamplePane" -->
-<!-- 					AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" -->
-<!-- 					AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" -->
-<!-- 					visible="false"> -->
-<!-- 					<children> -->
-<!-- 						<Label AnchorPane.topAnchor="20" AnchorPane.leftAnchor="240" -->
-<!-- 							text="Persistence Example" /> -->
-<!-- 					</children> -->
-<!-- 				</AnchorPane> -->
+				<fx:include fx:id="systemInfoPane"
+					source="SystemInfoView.fxml" />
+				<!-- <AnchorPane fx:id="systemInfoPane" -->
+				<!-- AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" -->
+				<!-- AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" -->
+				<!-- visible="true"> -->
+				<!-- <children> -->
+				<!-- <Label layoutX="198.0" AnchorPane.topAnchor="80" -->
+				<!-- AnchorPane.leftAnchor="185" -->
+				<!-- text="JavaFX with Spring Boot - Hello World" /> -->
+				<!-- <Button fx:id="openDialogButton" AnchorPane.topAnchor="160" -->
+				<!-- AnchorPane.leftAnchor="210" mnemonicParsing="false" -->
+				<!-- text="Get Some Info Using Spring" /> -->
+				<!-- </children> -->
+				<!-- </AnchorPane> -->
+				<fx:include fx:id="persistenceExamplePane"
+					source="PersistenceExampleView.fxml" />
+				<!-- <AnchorPane fx:id="persistenceExamplePane" -->
+				<!-- AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" -->
+				<!-- AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" -->
+				<!-- visible="false"> -->
+				<!-- <children> -->
+				<!-- <Label AnchorPane.topAnchor="20" AnchorPane.leftAnchor="240" -->
+				<!-- text="Persistence Example" /> -->
+				<!-- </children> -->
+				<!-- </AnchorPane> -->
 			</children>
 		</AnchorPane>
 	</children>
