--- a/projects/javafx-with-spring/src/main/resources/views/SystemInfoView.fxml
+++ b/projects/javafx-with-spring/src/main/resources/views/SystemInfoView.fxml
@@ -24,14 +24,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-
 <AnchorPane fx:id="systemInfoPane" prefHeight="400.0"
-	prefWidth="640.0" xmlns="http://javafx.com/javafx/21"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.gusrubin.lab.javafxwithspring.application.gui.controllers.SystemInfoController">
-	<children>
-		<Button fx:id="openDialogButton" mnemonicParsing="false"
-			text="Get Some Info Using Spring" AnchorPane.leftAnchor="200"
-			AnchorPane.topAnchor="150" />
-	</children>
+  prefWidth="640.0" xmlns="http://javafx.com/javafx/21"
+  xmlns:fx="http://javafx.com/fxml/1"
+  fx:controller="com.gusrubin.lab.javafxwithspring.infrastructure.adapter.in.gui.controllers.SystemInfoController">
+  <Button fx:id="openDialogButton" mnemonicParsing="false"
+    text="Get Some Info Using Spring" AnchorPane.leftAnchor="200"
+    AnchorPane.topAnchor="150"/>
 </AnchorPane>
