--- a/projects/javafx-with-spring/src/main/resources/views/SystemInfoView.fxml
+++ b/projects/javafx-with-spring/src/main/resources/views/SystemInfoView.fxml
@@ -24,11 +24,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane fx:id="systemInfoPane" prefHeight="400.0"
-  prefWidth="640.0" xmlns="http://javafx.com/javafx/21"
-  xmlns:fx="http://javafx.com/fxml/1"
-  fx:controller="com.gusrubin.lab.javafxwithspring.infrastructure.adapter.in.gui.controllers.SystemInfoController">
-  <Button fx:id="openDialogButton" mnemonicParsing="false"
-    text="Get Some Info Using Spring" AnchorPane.leftAnchor="200"
-    AnchorPane.topAnchor="150"/>
+
+<AnchorPane fx:id="systemInfoPane" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gusrubin.lab.javafxwithspring.infrastructure.adapter.in.gui.controllers.SystemInfoController">
+  <Button fx:id="openDialogButton" layoutX="226.0" layoutY="187.0" mnemonicParsing="false" text="Get Some Info Using Spring" AnchorPane.leftAnchor="226.0" AnchorPane.topAnchor="187.0" />
 </AnchorPane>
